# rogue.ai-sdk

./: .gitignore  .rouge-config-local.yaml  .rouge-config.yaml  CONTRIBUTING.md  DEMO_SPEC.md  LICENSE  MANIFEST.in  Makefile  README.md  ROUGE_AI_TECHNICAL.md  SECURITY.md  pyproject.toml  verify_dashboard.py
.github/workflows/: pre-commit.yml  test.yml
demo_app/: README.md  agent_service.py  gateway.py  main.py  multiagent.py
rouge/: __init__.py  config.py  logger.py  tracer.py
rouge/integrations/: fastapi.py  llm.py
rouge/utils/: config.py  security.py
scripts/: publish.sh
src/rouge/: __init__.py  config.py  constants.py  credentials.py
src/rouge/integrations/: fastapi.py
src/rouge_ai/: __init__.py  config.py  constants.py  credentials.py  introspection.py  logger.py  registry.py  schema.py  tracer.py
src/rouge_ai/dashboard/: README.md  api.py  server.py
src/rouge_ai/dashboard/frontend_src/: index.html  package-lock.json  package.json
src/rouge_ai/dashboard/frontend_src/src/: App.css  App.jsx  index.css
src/rouge_ai/dashboard/static/: index.html
src/rouge_ai/dashboard/static/assets/: index-DjEV-ine.js  index-TuE2j6tw.css  index-iSxamQQP.css  index-rpQa032k.js
src/rouge_ai/integrations/: fastapi.py  llm.py
src/rouge_ai/utils/: config.py  io.py
test/: test_credentials.py  test_e2e_complex.py  test_llm_config.py
test/credentials/: test_refresh.py
test/integ/: test_dashboard_mount.py  test_logger_integration.py
test/logger/: test_credential_lifecycle.py  test_logger.py  test_logger_init.py  test_trace_filter_fields.py
test/security/: __init__.py  test_security_fixes.py
test/tracer/: test_env_vars.py  test_tracer.py  test_tracer_init.py  test_tracer_verbose.py
test/utils/: test_config.py
